ajout des 5 premières pages plus mise en place des routeurs

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <!--<link rel="stylesheet" href="../src/class-generic.css">-->
+    <link rel="stylesheet" href="../src/index.css">
    
     <title>Siouplait</title>
   </head>
